@@ -9,4 +9,5 @@ Bug fixes:
 - The "latest doc" box didn't have the title translation on.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
--
+- getLockedObjectFrom draft does not scan a complete folder (use the catalog
+  instead)
